<resources>
    <string name="app_name">Food4One</string>
    <string name="title_activity_main_screen">MainScreen</string>

    <string name="defaultUserName">UserName_Prueba</string>

    <string name="title_coleccion">Coleccion</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_newRecipie">Nueva Receta</string>
    <string name="nuevaReceta">Upload</string>
    <string name="title_home">Recetas</string>
    <string name="title_colecciones">Colecciones</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_explore">Explore</string>

    <!-- Preference Titles -->

    <string name="Not_set">Unset</string>
    <string name="perfil_header">Mis Datos</string>

    <!-- Messages Preferences -->
    <string name="Email">Email</string>
    <string name="UserName_title">User Name</string>
    <string name="reply_title">Default reply action</string>

    <string name="Alergias">Alergias</string>
    <string name="Change_Password">Cambiar Contraseña</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Settings">Settings</string>
    <string name="Descripcion">Descripcion</string>



    <string-array name="nombreRecetasHome">
        <item>Barbacoa</item>
        <item>Pasta</item>
        <item>Bocatas</item>
        <item>Arroz</item>
        <item>Pasteles</item>
        <item>Bebidas</item>
        <item>Surprise me</item>
    </string-array>
    <string name="title_activity_make_recipe">MakeRecipe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>