<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".View.MainScreen.ui.Perfil.UserSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/Settings"
            android:textAllCaps="true"
            android:textColor="@color/orange"
            android:textSize="25dp"
            android:textStyle="bold">
        </TextView>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/GrisOscuro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            android:paddingStart="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/perfil_food" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/perfil_header"
                android:textColor="@color/orange"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutUseName_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            android:paddingStart="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/UserName_title"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/userName_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Your User Name"
                android:textColor="@color/Gris"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDescripcion_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            android:paddingStart="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/Descripcion"
                android:textColor="@color/white"
                android:textSize="16dp" />


            <TextView
                android:id="@+id/descripcion_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="Your Description"
                android:textColor="@color/Gris"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPassword_settings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingVertical="10dp"
            android:paddingStart="80dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Change_Password"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/GrisOscuro" />


        <LinearLayout
            android:id="@+id/layout_alergias_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="20dp"
            android:paddingLeft="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Alergias"
                android:textColor="@color/orange"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/arr_usrAlergias_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="None"
                android:textColor="@color/Gris"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/GrisOscuro" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>